styles/main-styles.css
:root {
    --main-bg: #0E1822;
    --hero-bg: #0E182280;
    --header-bg: #1A3B3F;
    --search-bg: #1A3B3F80;
    --border-color: #fff;
    --radius: 5px;
    --blur-color: #f3a75140;
    --text-shadow: #f3a75180;
    --font-color: #fff;
    --main-font: 'PT Sans';
    --serif-font: 'PT Serif';
    font-size: 16px;
}

html {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

*, *:before, *:after {
    box-sizing: inherit;
}

[href] {
    text-decoration: none;
    color: var(--font-color);
}

ul {
    list-style: none;
}

ul li:hover {
    cursor: pointer;
}

body {
    font-family: var(--main-font), 'sans-serif';
    background-color: var(--main-bg);
    background-image: url('../assets/img/bonfire_mobile.jpg');
    background-repeat: no-repeat;
    background-size: contain;
    color: var(--font-color);
    background-attachment: fixed;
    background-position: center bottom;
}

.wrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
}

header {
    background-color: var(--header-bg);
}

.banner {
    position: relative;
    padding: 0.8rem 1.1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.banner p {
    margin: 0;
    font-size: 1.3rem;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 0.1rem;
}

.logo-desktop, .logo-mobile {
    font-size: 0;
}

.logo-desktop {
    display: none;
}

.hamburger {
    transition: all 0.3s ease-in-out;
}

.hamburger:hover, .hamburger:hover + nav > .close {
transform: rotate(-360deg);
}

.hamburger:hover + nav {
    transform-origin: top right;
    transform: scale(1.0);
    transition: all 0.3s ease-in-out 0.1s;
}

nav {
    position: absolute;
    display: flex;
    flex-direction: column;
    right: 0.5rem;
    top: 0.65rem;
    z-index: 1;
    border: 1px solid var(--border-color);
    box-shadow: 0 -2px 10px 1px var(--blur-color);
    border-radius: var(--radius);
    background-color: var(--header-bg);
    width: 13.5rem;
    transform-origin: top right;
    transform: scale(0);
    transition: all 0.3s ease-in-out 0.1s;
}

nav ul {
    font-size: 1.1rem;
    font-weight: bold;
    line-height: 2.6rem;
    letter-spacing: 0.1rem;
    margin: 0 0 2rem 2rem;
}

nav ul li:nth-last-child(-n+2), nav ul span {
    display: none;
}

.close {
    align-self: flex-end;
    margin: 5px 5px 0;
    transition: transform 0.3s ease-in-out;
}

.close:hover {
    cursor: pointer;
}

.search-section {
    width: 100%;
    padding: 1rem;
}

.search-bar {
    padding: 0.5rem 0.3rem;
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 0.5rem;
    width: 100%;
    margin-bottom: 0.5rem;
    border: 1px solid var(--border-color);
    border-radius: var(--radius);
    background-color: var(--search-bg);
    box-shadow: 0 -2px 10px 1px var(--blur-color);
}

.search-bar input {
    height: 100%;
    width: 100%;
    border: none;
    padding-left: 0.3rem;
    font-size: 0.9rem;
    color: var(--font-color);
    background-color: transparent;
    outline: none;
}

.search-btn {
    padding-right: 0.5rem;
    border: none;
    background: none;
    color: var(--font-color);
    opacity: 50%;
}

.search-btn i {
    font-size: 1.2rem;
}

/* DESKTOP */

@media only screen
and (min-width: 1000px) {
    :root {
        font-size: 18px;
    }

    body {
        background-image: url('../assets/img/bonfire_desktop.jpg');
    }

    .wrapper {
        gap: 15%;
    }

    .banner {
        padding: 0.5rem 1.1rem;
        justify-content: space-around;
    }

    .banner p {
        font-size: 1.3rem;
        letter-spacing: 0.1rem;
    }

    .logo-mobile {
        display: none;
    }

    .logo-desktop {
        display: inherit;
        height: 2.7rem;
    }

    .hamburger {
        display: none;
    }

    nav {
        position: static;
        border: none;
        box-shadow: none;
        border-radius: none;
        background-color: none;
        width: auto;
        transform: scale(1);
        transition: none;
    }

    nav ul {
        display: flex;
        flex-wrap: nowrap;
        gap: 1.2rem;
        list-style: none;
        font-size: 0.7rem;
        font-weight: bold;
        line-height: normal;
        letter-spacing: 0.05rem;
        margin: 0;
    }
    
    nav ul li:nth-last-child(-n+2), nav ul span {
        display: inherit;
    }

    nav ul li:nth-last-child(4) {
        margin: 0 -1rem 0 0;
    }

    nav ul li:hover {
        text-decoration: underline;
        text-shadow: 2px -2px 4px var(--text-shadow);
    }

    nav ul span {
        margin-right: -1rem;
    }

    .close {
        display: none;
    }

    .search-section {
        display: none;
        position: absolute;        
        right: 0;
        top: 3.5rem;
        width: 21rem;
        padding: 1rem;
    }
}


@media only screen
and (min-width: 1200px) {

    .banner p {
        font-size: 1.5rem;
    }

    nav ul {
        font-size: 0.9rem;
    }
}


@media only screen
and (min-width: 1500px) {

    .banner p {
        font-size: 2rem;
        letter-spacing: 0.15rem;
    }

    .logo-desktop {
        height: 3rem;
    }

    nav ul {
        font-size: 1rem;
        gap: 1.5rem;
    }

    .search-section {
        top: 4rem;
    }
}

